WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70389
Assertion failure when going back in page with navigated subframes
https://bugs.webkit.org/show_bug.cgi?id=70389
Summary
Assertion failure when going back in page with navigated subframes
Anders Carlsson
Reported
2011-10-18 17:25:12 PDT
Assertion failure when going back in page with navigated subframes
Attachments
Patch
(6.32 KB, patch)
2011-10-18 17:32 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-10-18 17:32:07 PDT
Created
attachment 111537
[details]
Patch
Anders Carlsson
Comment 2
2011-10-18 17:51:28 PDT
Committed
r97821
: <
http://trac.webkit.org/changeset/97821
>
Dirk Pranke
Comment 3
2011-10-18 18:20:01 PDT
Oddly, the -expected.txt file in the patch has "This tests that navigating two subframes and then going back using history.go(-2) won't assert." once, but the file that actually got landed has that line repeated. I assume that is a mistake somehow? I will land an updated baseline if you aren't around to comment on this in the next ~30 min or so.
Dirk Pranke
Comment 4
2011-10-18 18:34:42 PDT
filed
bug 70393
to fix the baseline.
Dirk Pranke
Comment 5
2011-10-18 18:37:00 PDT
landed an updated baseline.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug